# obs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  Dockerfile  Dockerfile.arm64  README.md  Taskfile.yml  entrypoint.sh  healthcheck.sh  pyproject.toml  release-please-config.json  towncrier.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: auto-tag.yml  backmerge.yml  cdk8s-synth.yml  changelog.yml  dev-image.yml  obs-base.yml  pending-release.yml  pre-commit.yml  release-development.yml  release-please.yml  release.yml  super-linter.yml  testing.yml
carhum/: README.md  carhum.py  render-variants.sh
cdk8s/: config.py  contract.py  main.py  obs_app.py  versions.yaml
changelog.d/: +changelog-autonumber.changed.md  +dashcam-mediamtx.changed.md  +eso-parameterstore.changed.md  +lift-yt-cap.changed.md  +park-prod-youtube.changed.md  +per-platform-bitrate-cap.changed.md  +runtime-replicas.changed.md  +somafm-buffer.fixed.md  +youtube-obs-x264.changed.md  1.added.md  15.changed.md  17.fixed.md  26.removed.md  30.changed.md  38.fix.md  44.added.md  46.added.md  48.added.md  53.changed.md  6.added.md  71.added.md
config/: Tripbot.json.tmpl  global.ini  sway-headless.conf  wayvnc.cfg.tmpl
script/: obs_server.py  start-browser-refresh.sh  start-novnc.sh  start-obs.sh  start-sway.sh  start-wayvnc.sh
scripts/: check-changelog-fragment.sh
